infra/base/apps/forge-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forge-api
  namespace: todde
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: api.toddemanos.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: forge-api
                port:
                  number: 80
